# cpp-template

./: CMakeLists.txt  README.md
.github/workflows/: build-test.yml
